terraform/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend # This is how it finds your running pods
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
